kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env/test_2.stderr
error: Expected at most 2 arguments, got 3.
 --> $DIR/test_2.rs:5:29
  |
5 | #[require_binary_static_env(E, crate, X)]
  |                             ^^^^^^^^^^^
